[package]
name = "tungstenite-rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "tungstenite_rs"
proc-macro = true

[dependencies]
env_logger = "0.10.0"
futures-util = "0.3.27"
log = "0.4.17"
tokio = { version = "1.26.0", features = [ "full" ] }
tokio-tungstenite = "0.18.0"
tungstenite = "0.18.0"
url = "2.3.1"
